# lznt1

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_main.rs
fuzz/: Cargo.toml  lznt1.dict
fuzz/fuzz_targets/: fuzz.rs
src/: compress.rs  decompress.rs  error.rs  lib.rs
tests/: comprehensive.rs
