[package]
name = "lznt1"
description = "A pure Rust implementation of the LZNT1 compression algorithm used by Windows."
keywords = ["lznt1", "compression", "decompression", "ntfs", "windows"]
categories = ["compression", "encoding", "filesystem", "no-std", "algorithms"]
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "bench_main"
harness = false
